--- a/team/musab/musab.css
+++ b/team/musab/musab.css
@@ -17,23 +17,22 @@
 .button,
 #alert-button {
   display: block;
-  /* font-weight: bold; */
+  border: 0;
+  background-color: grey;
+  /* border-radius: 4px; */
+  box-shadow: 0 5px 0 white;
+  color: #fff;
+  cursor: pointer;
   font-size: large;
   margin: 0 auto 0 auto;
-  border: none;
-  background-color: grey;
-  color: white;
-  padding: 5px 15px 5px 15px;
-  transition: 300ms;
-}
-.button:hover,
-#alert-button {
-  background-color: black;
-  transition: 300ms;
-}
-.button:focus,
-#alert-button {
   outline: 0;
+  /* padding: 12px 20px; */
+  transition: all .1s linear;
+}
+.button:active,
+#alert-button:active {
+  box-shadow: 0 2px 0 white;
+  transform: translateY(3px);
 }
 
 
