--- a/team/ali/ali.css
+++ b/team/ali/ali.css
@@ -2,6 +2,11 @@ body {
   background-color: black;
 }
 
+.row {
+  display: flex;
+  height: 30vh; 
+}
+
 #box5 {
   /* background-color: white; */
   color: white;
@@ -298,7 +303,7 @@ body {
   animation: xAxis6 2s infinite ease-out;
 }
 #fig6 {
-  background-color: pink;
+  background-color:deepskyblue;
   opacity: 50%;
   border-radius: 50%;
   box-shadow: inset 0 0 20px;
@@ -334,7 +339,7 @@ body {
   animation: xAxis7 10s infinite ease-out;
 }
 #fig7 {
-  background-color:white;
+  background-color:violet;
   opacity: 50%;
   border-radius: 50%;
   box-shadow: inset 0 0 20px;
@@ -409,6 +414,43 @@ body {
   transition: 200ms ease-in-out;
 }
 #fig8-3:hover {
+  opacity: unset;
+  transition: 200ms ease-in-out;
+}
+
+
+/* ball 9 */
+@keyframes xAxis9 {
+  50% {
+    animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
+    transform: translateX(100px);
+  }
+}
+@keyframes yAxis9 {
+  50% {
+    animation-timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
+    transform: translateY(50px);
+  }
+}
+#fake9 {
+  /* background: tomato; */
+  opacity: 75%;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  animation: xAxis9 5s infinite ease-out;
+}
+#fig9 {
+  background-color:lawngreen;
+  opacity: 50%;
+  border-radius: 50%;
+  box-shadow: inset 0 0 20px;
+  height: 100px;
+  width: 100px;
+  animation: yAxis9 3s infinite ease-in;
+  transition: 200ms ease-in-out;
+}
+#fig9:hover {
   opacity: unset;
   transition: 200ms ease-in-out;
 }
