--- a/team/ali/ali.css
+++ b/team/ali/ali.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  overflow-x: hidden;
 }
 
 .row {
@@ -8,10 +9,11 @@ body {
 }
 
 #box5 {
-  /* background-color: white; */
+  background-color: black;
   color: white;
   display: table;
   border-radius: 0;
+  z-index: 1;
   box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
 }
 
@@ -27,35 +29,6 @@ body {
   font-size: x-large;
 }
 
-/* .button,
-#alert-button {
-  border: none;
-  background-color: grey;
-  color: white;
-  font-size: large;
-  display: block;
-  margin: 0 auto 0 auto;
-  outline: 0;
-  padding: 5px 15px 5px 15px;
-  cursor: pointer;
-  box-shadow: 0 5px 0 red;
-  transition: all .1s linear;
-}
-.button:hover,
-#alert-button:hover {
-  background-color: black;
-  transition: 300ms;
-}
-.button:focus,
-#alert-button:focus {
-  outline: 0;
-}
-.button:active,
-#alert-button:active {
-  box-shadow: 0 2px 2 blue;
-  transform: translateY(3px);
-} */
-
 .button,
 #alert-button {
   display: block;
@@ -69,7 +42,8 @@ body {
   margin: 0 auto 0 auto;
   outline: 0;
   /* padding: 12px 20px; */
-  transition: all .1s linear;
+  /* padding: 10px; */
+  transition: all .05s linear;
 }
 .button:active,
 #alert-button:active {
@@ -77,50 +51,41 @@ body {
   transform: translateY(3px);
 }
 
+/* the because class is for the buttons on the third question */
+.because {
+  box-shadow: 0 2px 0 white;
+  transform: translateY(3px);
+}
+
 #alert {
-  visibility: hidden;
+  visibility:hidden;
   display: table;
   position: fixed;
   text-align: center;
   width: 500px;
-  height: 500px;
-  background-color: burlywood;
+  height: 300px;
+  background-color: black;
   top: 50%;
   left: 50%;
-  margin-top: -250px;
+  margin-top: -150px;
   margin-left: -250px;
+  z-index: 2;
+  box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
 }
 #alert-box {
   display: table-cell;
   vertical-align: middle;
 }
 #alert-text {
+  padding: 10px;
+  color: white;
   font-weight: bold;
   font-size: x-large;
 }
 
-
-@keyframes slide {
-  0% {
-    left: 0;
-    top: 0;
-  }
-  50% {
-    left: 244px;
-    top: 100px;
-  }
-  100% {
-    left: 488px;
-    top: 0;
-  }
+.figure:hover {
+  cursor: pointer;
 }
-
-@keyframes straightLine {
-  50% {
-    transform: translate3D(100px, -100px, 0);
-  }
-}
-
 
 /* ball 1 */
 @keyframes xAxis1 {
