--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,17 @@
+body {
+  background-color: black;
+}
+
+#home {
+  text-decoration: none;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  /* font-weight: bold; */
+  font-size: xx-large;
+}
+
 .box {
-  border: solid black;  
+  border: none;  
   /* background: black; */
   flex: 33%;
   margin: 20px;
@@ -9,4 +21,45 @@
   display: flex;
   height: 33vh; 
   vertical-align: center;
+}
+
+#box5 {
+  background-color: black;
+  color: white;
+  display: table;
+  border-radius: 0;
+  z-index: 1;
+  box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
+}
+
+#form {
+  padding: 30px;
+  text-align: center;
+  display: table-cell;
+}
+
+.label {
+  display: block;
+  /* font-weight: bold; */
+  font-size: x-large;
+}
+
+.button {
+  display: block;
+  border: 0;
+  background-color: grey;
+  /* border-radius: 4px; */
+  box-shadow: 0 5px 0 white;
+  color: #fff;
+  cursor: pointer;
+  font-size: large;
+  margin: 0 auto 0 auto;
+  outline: 0;
+  /* padding: 12px 20px; */
+  /* padding: 10px; */
+  transition: all .05s linear;
+}
+.button:active {
+  box-shadow: 0 2px 0 white;
+  transform: translateY(3px);
 }
