--- a/css/style.css
+++ b/css/style.css
@@ -44,4 +44,6 @@ footer {
   /* position: fixed; */
   bottom: 0;
   width: 100%;
+  font-family: 'Courier New', Courier, monospace;
+  line-height: normal;
 }
