--- a/team/ayah/ayah.css
+++ b/team/ayah/ayah.css
@@ -1,5 +1,36 @@
+body{
+  background-image:url(https://64.media.tumblr.com/e463c7484d67b0a0f5b35deb08c087c5/tumblr_n4ftu3n7qe1twkrf5o1_1280.gif);
+  background-repeat: repeat;
+  background-size:cover;
+  background-attachment: fixed;
+  padding: 0;
+  margin: 0;
+}
+
+#form input[type='radio'] {
+  visibility: hidden;
+}
+
+#fake4 {
+  opacity: 75%;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  animation: xAxis4 5s infinite ease-out;
+}
+#fig4 {
+  background-color: tomato;
+  opacity: 50%;
+  border-radius: 50%;
+  box-shadow: inset 0 0 20px;
+  height: 100px;
+  width: 100px;
+  animation: yAxis4 2s infinite ease-in;
+  transition: 200ms ease-in-out;
+}
 #box5 {
   display: table;
+  border: solid;
 }
 
 #form {
@@ -17,28 +48,26 @@
 .button,
 #alert-button {
   display: block;
-  /* font-weight: bold; */
+  border: 0;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  box-shadow: 0 5px 0 black;
+  color: rgb(15, 15, 15);
+  cursor: pointer;
   font-size: large;
   margin: 0 auto 0 auto;
-  border: none;
-  background-color: grey;
-  color: white;
-  padding: 5px 15px 5px 15px;
-  transition: 300ms;
-}
-.button:hover,
-#alert-button {
-  background-color: black;
-  transition: 300ms;
-}
-.button:focus,
-#alert-button {
   outline: 0;
+  /* padding: 12px 20px; */
+  transition: all .1s linear;
 }
-
+.button:active,
+#alert-button:active {
+  box-shadow: 0 2px 0 rgb(0, 0, 0);
+  transform: translateY(3px);
+}
 
 #alert {
-  visibility: hidden;
+  visibility:hidden;
   display: table;
   position: fixed;
   text-align: center;
@@ -51,10 +80,14 @@
   margin-left: -250px;
 }
 #alert-box {
-  display: table-cell;
+  display:table-cell;
   vertical-align: middle;
 }
 #alert-text {
   font-weight: bold;
   font-size: x-large;
+}
+
+.box {
+  border: none;
 }
