--- a/team/ayah/ayah.css
+++ b/team/ayah/ayah.css
@@ -7,30 +7,18 @@ body{
   margin: 0;
 }
 
+
 #form input[type='radio'] {
   visibility: hidden;
 }
 
-#fake4 {
-  opacity: 75%;
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  animation: xAxis4 5s infinite ease-out;
-}
-#fig4 {
-  background-color: tomato;
-  opacity: 50%;
-  border-radius: 50%;
-  box-shadow: inset 0 0 20px;
-  height: 100px;
-  width: 100px;
-  animation: yAxis4 2s infinite ease-in;
-  transition: 200ms ease-in-out;
-}
-#box5 {
+
+#quiz {
+  margin-top: -5%;
+  padding-top: 20px;
   display: table;
   border: solid;
+  z-index: 1;
 }
 
 #form {
@@ -44,6 +32,11 @@ body{
   font-weight: bold;
   font-size: x-large;
 }
+#question{
+  display:block;
+  font-weight: bold;
+  font-size: xx-large;
+}
 
 .button,
 #alert-button {
@@ -54,7 +47,7 @@ body{
   box-shadow: 0 5px 0 black;
   color: rgb(15, 15, 15);
   cursor: pointer;
-  font-size: large;
+  font-size: x-large;
   margin: 0 auto 0 auto;
   outline: 0;
   /* padding: 12px 20px; */
@@ -65,6 +58,7 @@ body{
   box-shadow: 0 2px 0 rgb(0, 0, 0);
   transform: translateY(3px);
 }
+
 
 #alert {
   visibility:hidden;
@@ -90,4 +84,12 @@ body{
 
 .box {
   border: none;
+}
+.button{
+  margin-top: 10px;
+}
+.button,
+buttonD{
+  margin-bottom: 10px;
+
 }
