--- a/team/ali/ali.css
+++ b/team/ali/ali.css
@@ -49,7 +49,8 @@ header {
   display: block;
   border: 0;
   background-color: grey;
-  /* border-radius: 4px; */
+  border-radius: 4px;
+  padding: 5px 20px 5px 20px;
   box-shadow: 0 5px 0 white;
   color: #fff;
   cursor: pointer;
