--- a/team/musab/musab.css
+++ b/team/musab/musab.css
@@ -1,7 +1,52 @@
-#box5 {
-  display: table;
+main{
+  background-image: url(/team/musab/img/42669630_custom-2048x934.jpg);
+  background-size: cover;
+  position: relative;
 }
-
+#ps{
+  background-color: white;
+  color: black;
+  text-align: center;
+}
+#divo{
+  cursor: pointer;
+  width: 68px;
+  height: 35px;
+  display: inline-block;
+  position: absolute;
+  top: 180px;
+  left: 400px;
+}
+.box {
+  border: none;  
+  background:none;
+}
+#box2{
+  height: 30px;
+  width: 50px;
+  position: relative;
+  top: 190px;
+}
+#box5 {
+  background:linear-gradient(to right,rgb(230, 216, 177),rgb(33, 34, 16) );
+  
+  height:180px ;
+  width: 50px;
+}
+#answers{
+  background-color: blue;
+  position: relative;
+  color: black;
+  
+  top: 160px;
+}
+#Fan{
+  position: relative;
+  height:100px ;
+  width: 300px;
+  left: 520px;
+  top: -30px;
+}
 #form {
   padding: 30px;
   text-align: center;
@@ -56,4 +101,12 @@
 #alert-text {
   font-weight: bold;
   font-size: x-large;
+}
+
+
+
+#firstTarget{
+  width: 50px;
+ 
+
 }
