--- a/team/ali/ali.css
+++ b/team/ali/ali.css
@@ -1,19 +1,29 @@
+:root {
+  --primary: #000408;
+  --secondary: #0CCD58;
+  --tertiary: #0B6A26;
+  --light: #DFEFE2;
+  --dark: #000801;
+}
+
 body {
-  background-color: black;
+  background-color: var(--primary);
   overflow-x: hidden;
 }
 
 header {
   font-family: 'Courier New', Courier, monospace;
+  background-color: var(--primary);
 }
 #home {
   text-decoration: none;
-  color: white;
+  color: var(--secondary);
   font-family: 'Courier New', Courier, monospace;
   /* font-weight: bold; */
   font-size: xx-large;
 }
 #level-tracker {
+  color: #0CCD58;
   font-size: x-large;
   float: right;
   padding-right: 50px;
@@ -23,13 +33,17 @@ header {
   display: flex;
   height: 30vh; 
 }
+.box {
+  border:none;
+}
+
 #box5 {
-  background-color: black;
-  color: white;
+  background-color: var(--primary);
+  color: var(--secondary);
   display: table;
   border-radius: 0;
   z-index: 1;
-  box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
+  box-shadow: rgba(12, 205, 88, 0.4) 0 0 0 5px, rgba(12, 205, 88, 0.3) -5px 5px 0 5px, rgba(12, 205, 88, 0.2) -10px 10px 0 5px, rgba(12, 205, 88, 0.1) -15px 15px 0 5px;
 }
 
 #form {
@@ -48,13 +62,14 @@ header {
 #alert-button {
   display: block;
   border: 0;
-  background-color: grey;
+  background-color: var(--secondary);
   border-radius: 4px;
   padding: 5px 20px 5px 20px;
-  box-shadow: 0 5px 0 white;
-  color: #fff;
+  box-shadow: 0 5px 0 var(--tertiary);
+  color: var(--dark);
   cursor: pointer;
-  font-size: large;
+  font-size: larger;
+  font-weight: bold;
   margin: 0 auto 0 auto;
   outline: 0;
   /* padding: 12px 20px; */
@@ -63,8 +78,12 @@ header {
 }
 .button:active,
 #alert-button:active {
-  box-shadow: 0 2px 0 white;
+  box-shadow: 0 2px 0 var(--tertiary);
   transform: translateY(3px);
+}
+#alert-button {
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 
@@ -75,13 +94,13 @@ header {
   text-align: center;
   width: 500px;
   height: 300px;
-  background-color: black;
+  background-color: var(--primary);
   top: 50%;
   left: 50%;
   margin-top: -150px;
   margin-left: -250px;
   z-index: 2;
-  box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
+  box-shadow: rgba(12, 205, 88, 0.4) 0 0 0 5px, rgba(12, 205, 88, 0.3) -5px 5px 0 5px, rgba(12, 205, 88, 0.2) -10px 10px 0 5px, rgba(12, 205, 88, 0.1) -15px 15px 0 5px;
 }
 #alert-box {
   display: table-cell;
@@ -89,7 +108,7 @@ header {
 }
 #alert-text {
   padding: 10px;
-  color: white;
+  color: var(--secondary);
   font-weight: bold;
   font-size: x-large;
 }
@@ -433,4 +452,6 @@ header {
 
 footer {
   margin-top: 200px;
+  background-color: var(--primary);
+  color: #0CCD58;
 }
