--- a/team/ali/ali.css
+++ b/team/ali/ali.css
@@ -81,10 +81,6 @@ header {
   box-shadow: 0 2px 0 var(--tertiary);
   transform: translateY(3px);
 }
-#alert-button {
-  margin-right: 30px;
-  margin-left: 30px;
-}
 
 
 #alert {
@@ -105,6 +101,7 @@ header {
 #alert-box {
   display: table-cell;
   vertical-align: middle;
+  padding: 30px;
 }
 #alert-text {
   padding: 10px;
