--- a/team/mohammad/mohammad.css
+++ b/team/mohammad/mohammad.css
@@ -1,4 +1,4 @@
-#box5 {
+/* #box5 {
   display: table;
 }
 
@@ -18,7 +18,7 @@
 #alert-button {
   display: block;
   /* font-weight: bold; */
-  font-size: large;
+  /* font-size: large;
   margin: 0 auto 0 auto;
   border: none;
   background-color: grey;
@@ -35,7 +35,7 @@
 #alert-button {
   outline: 0;
 }
-
+ */
 
 #alert {
   visibility: hidden;
@@ -57,4 +57,342 @@
 #alert-text {
   font-weight: bold;
   font-size: x-large;
+} */
+
+
+/* THIS FILE CONTAINS STYLING THAT IS UNIQUE TO index.html:
+please use it for stuff like card, buttons etc that is unique to this page */
+
+body {
+  user-select: none; /* prevent text selection */
+}
+
+#card-wrapper {
+  width: 480px;
+  min-height: 320px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px;
+  cursor: pointer;
+}
+
+.instructions {
+  min-height: 350px;
+  background: url('./img/paper_texture.jpg');
+  box-shadow: 3px 2px 6px 2px rgba(0,0,0,0.5);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 35px;
+  line-height: 55px;
+}
+#settings {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  left: 730px;
+  background-color: rgba(255, 255, 255, 0.8);
+  background-image: url('./img/settings.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 35px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#settings:hover {
+  transition: 0.2s ease 0s;
+  background-color: rgba(245, 205, 121, 0.6);
+}
+#settings:active {
+  transition: 0s;
+  transform: translateY(3px);
+}
+/* p element that holds rating buttons instruction */
+#choices {
+  color: #f7f5f5;
+  font-size: 18px;
+  font-weight: 900;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin: 10px auto;
+}
+
+/* 3 img elements that hold the rating buttons */
+.known-level {
+  width: 50px;
+  padding: 20px;
+  transition: 0.5s;
+}
+
+#choices-section {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#choices-section > img {
+  cursor: pointer;
+}
+#known-ul {
+  width: 300px;
+  margin: auto;
+}
+
+figcaption {
+  color: white;
+  font-size: 13px;
+}
+
+/* FLIPPING FRONT PAGE CART */
+.flip-card {
+  width: 480px;
+  min-height: 350px;
+  perspective: 1000px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+  word-break: break-all;
+  word-break: break-word;
+}
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.flip-card-inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-inner p {
+  padding: 25px;
+}
+
+.flip-card-front {
+  color: #546de5;
+  font-size: 30px;
+  line-height: 35px;
+  min-height: 350px;
+  background: url('./img/paper_front.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 2px 6px 2px rgba(0,0,0,0.5);
+}
+
+.flip-card-back {
+  color: #e15f41;
+  font-size: 30px;
+  line-height: 35px;
+  min-height: 350px;
+  transform: rotateY(180deg);
+  background: url('./img/paper.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 2px 6px 2px rgba(0,0,0,0.5);
+}
+
+/* The Modal (background) */
+.model {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /*hide scrollbar */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  font-family: "Montserrat", sans-serif;
+}
+
+/* Modal Content/Box */
+.model-content {
+  width: 780px;
+  height: 300px;
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 5px;
+}
+.model-content * {
+  margin-top: 10px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+h2 {
+  font-size: 25px;
+}
+#category {
+  display: block;
+  width: 300px;
+  margin: 35px auto;
+  font-size: 18px;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 700;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	max-width: 100%;
+	box-sizing: border-box;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+	border-radius: 5px;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	background-image: url(./img/arrow.png),
+	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+	background-repeat: no-repeat, repeat;
+	background-position: right .7em top 50%, 0 0;
+  background-size: 30px auto, 100%;
+}
+#category::-ms-expand {
+	display: none;
+}
+#category:hover {
+	border-color: #FBDB53;
+}
+#category:focus {
+	border-color: #aaa;
+	color: #222;
+	outline: none;
+}
+#category option {
+	font-weight: normal;
+}
+
+#settings-submit {
+  margin-top: 35px;
+}
+
+
+/* THIS FILE CONTAINS STYLING THAT IS APPLIED TO ALL PAGES:
+please use it for stuff like headers, footers, nav etc that is not unique to one page */
+@import url('https://fonts.googleapis.com/css?family=Bevan|Montserrat|Source+Sans+Pro+Frijole|Gloria+Hallelujah&display=swap');
+html {
+  font-family: "Avenir Next", "Avenir", sans-serif;
+  background: url('./img/bg.gif') center;;
+  background-size: cover;
+}
+/* 
+body {
+  position: relative;
+  min-height: 100vh;
+} */
+
+/* HEADER - START */
+/* header {
+  position: fixed;
+  width: 100%;
+  height: 150px;
+  background-color: #9adfe7;
+  z-index: 3;
+}
+header > a {
+  position: relative;
+  left: 280px;
+  width: 150px;
+}
+
+header img {
+  width: 150px;
+} */
+
+/* NAV - HAMBURGER MENU - END */
+/* HEADER - END */
+
+/* MAIN - START*/
+main {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.content-wrapper {
+  width: 780px;
+  margin: 20px auto;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.4);
+  border-radius: 5px;
+}
+
+/* h1 {
+  position: relative;
+  display: inline;
+  left: 350px;
+  top: -60px;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 5px;
+  font-size: 40px;
+  font-weight: 900;
+  color: #303952;
+} */
+
+button {
+  padding: 10px 45px;
+  margin: 5px 10px;
+  background: #e15f41;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+button:hover {
+  transition: 0.2s ease 0s;
+  background: #f0b53a;
+}
+button:active {
+  transition: 0s;
+  transform: translateY(3px);
+}
+
+/* MAIN - END*/
+
+/* FOOTER - START*/
+/* footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  background: #a0a7b6;
+  text-align: center;
+}
+/* FOOTER - END*/
+
+/* STYLING CLASSES */
+/* post-it note style */
+.post-it {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 25px;
+  line-height: 30px;
+  border-bottom-right-radius: 60px 5px; 
 }
