--- a/team/ayah/ayah.css
+++ b/team/ayah/ayah.css
@@ -32,8 +32,9 @@ header {
   margin-top: -5%;
   padding-top: 20px;
   display: table;
-  border: solid;
+  border: solid black;
   z-index: 1;
+  box-shadow: rgba(250, 250, 250, 0.4) 0 0 0 5px, rgba(250, 250, 250, 0.3) -5px 5px 0 5px, rgba(250, 250, 250, 0.2) -10px 10px 0 5px, rgba(250, 250, 250, 0.1) -15px 15px 0 5px;
 }
 
 #form {
@@ -45,12 +46,14 @@ header {
 #label {
   display: block;
   font-weight: bold;
-  font-size: x-large;
+  font-size: xx-large;
+
 }
 #question{
   display:block;
   font-weight: bold;
   font-size: xx-large;
+  
 }
 
 .button,
@@ -59,7 +62,7 @@ header {
   border: 0;
   background-color: rgb(255, 255, 255);
   border-radius: 4px;
-  box-shadow: 0 5px 0 black;
+  box-shadow: 0 7px 0 black;
   color: rgb(15, 15, 15);
   cursor: pointer;
   font-size: x-large;
@@ -67,6 +70,8 @@ header {
   outline: 0;
   /* padding: 12px 20px; */
   transition: all .1s linear;
+  width: 200px;
+  height: 50px;
 }
 .button:active,
 #alert-button:active {
