--- a/team/musab/musab3.css
+++ b/team/musab/musab3.css
@@ -97,3 +97,65 @@ form {
   top: 700px;
   left: 300px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.button,
+#alert-button {
+  display: block;
+  border: 0;
+  background-color: grey;
+  /* border-radius: 4px; */
+  box-shadow: 0 5px 0 white;
+  color: #fff;
+  cursor: pointer;
+  font-size: large;
+  margin: 0 auto 0 auto;
+  outline: 0;
+  /* padding: 12px 20px; */
+  transition: all .1s linear;
+}
+.button:active,
+#alert-button:active {
+  box-shadow: 0 2px 0 white;
+  transform: translateY(3px);
+}
+
+
+#alert {
+  visibility: hidden;
+  display: table;
+  position: fixed;
+  text-align: center;
+  width: 500px;
+  height: 500px;
+  background-color: burlywood;
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -250px;
+}
+#alert-box {
+  display: table-cell;
+  vertical-align: middle;
+}
+#alert-text {
+  font-weight: bold;
+  font-size: x-large;
+}
