--- a/team/musab/musab.css
+++ b/team/musab/musab.css
@@ -1,8 +1,35 @@
-
+:root {
+  --primary: #000408;
+  --secondary: #0CCD58;
+  --tertiary: #0B6A26;
+  --light: #DFEFE2;
+  --dark: #000801;
+}
 
 body{
   box-sizing: border-box;
-  background-image: radial-gradient(circle, #006711 0%, #110101 100%);}
+  /* background-image: radial-gradient(circle, #006711 0%, #110101 100%); */
+  background-color: var(--primary);
+  z-index: -3;
+}
+
+header {
+  font-family: 'Courier New', Courier, monospace;
+  background-color: var(--primary);
+}
+#home {
+  text-decoration: none;
+  color: var(--secondary);
+  font-family: 'Courier New', Courier, monospace;
+  /* font-weight: bold; */
+  font-size: xx-large;
+}
+#level-tracker {
+  color: var(--secondary);
+  font-size: x-large;
+  float: right;
+  padding-right: 50px;
+}
 
 main {
   margin: auto;
@@ -10,7 +37,21 @@ main {
   height: 900px;
   width: 1800px;
   position: relative;
+  /* z-index: -2; */
 }
+
+#overlay {
+  background-color: var(--tertiary);
+  opacity: 75%;
+  height: 900px;
+  width: 1800px;
+  position: absolute;
+  margin: auto;
+  /* z-index: -1; */
+}
+
+
+
 a{
   text-decoration: none;
   color: green;
@@ -24,6 +65,16 @@ a{
   position: absolute;
   top: 220px;
   left: 490px;
+  z-index: 1;
+  /* background-color: yellow ; */
+}
+
+.row {
+  display: flex;
+  height: 30vh; 
+}
+.box {
+  border:none;
 }
 
 .box {
@@ -39,19 +90,12 @@ a{
 }
 
 #box5 {
-  background: linear-gradient(to right, rgb(230, 216, 177), rgb(33, 34, 16));
-  position: absolute;
+  /* background: linear-gradient(to right, rgb(230, 216, 177), rgb(33, 34, 16)); */
+  /* position: absolute; */
   height: 300px;
   width: 500px;
-  top: 400px;
-  left: 650px;
-}
-
-#answers {
-  background-color: blue;
-  position: relative;
-  color: black;
-  top: 160px;
+  /* top: 400px; */
+  /* left: 650px; */
 }
 
 #Fan {
@@ -121,4 +165,92 @@ a{
 
 #firstTarget {
   width: 50px;
+}
+
+/* edit starts here */
+
+#box5 {
+  background-color: var(--primary);
+  opacity: 50%;
+  color: var(--secondary);
+  display: table;
+  border-radius: 0;
+  z-index: 1;
+  box-shadow: rgba(12, 205, 88, 0.4) 0 0 0 5px, rgba(12, 205, 88, 0.3) -5px 5px 0 5px, rgba(12, 205, 88, 0.2) -10px 10px 0 5px, rgba(12, 205, 88, 0.1) -15px 15px 0 5px;
+  cursor: pointer;
+  transition: 250ms ease-in-out;
+}
+#box5:hover{
+  opacity: 75%;
+  transition: 250ms ease-in-out;
+}
+
+#form {
+  padding: 30px;
+  text-align: center;
+  display: table-cell;
+}
+
+#label {
+  display: block;
+  font-weight: bold;
+  font-size: x-large;
+}
+
+.button,
+#alert-button {
+  display: block;
+  border: 0;
+  background-color: var(--secondary);
+  border-radius: 4px;
+  padding: 5px 20px 5px 20px;
+  box-shadow: 0 5px 0 var(--tertiary);
+  color: var(--dark);
+  cursor: pointer;
+  font-size: larger;
+  font-weight: bold;
+  margin: 0 auto 0 auto;
+  outline: 0;
+  /* padding: 12px 20px; */
+  /* padding: 10px; */
+  transition: all .05s linear;
+}
+.button:active,
+#alert-button:active {
+  box-shadow: 0 2px 0 var(--tertiary);
+  transform: translateY(3px);
+}
+
+
+#alert {
+  visibility:hidden;
+  display: table;
+  position: fixed;
+  text-align: center;
+  width: 500px;
+  height: 300px;
+  background-color: var(--primary);
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -250px;
+  z-index: 2;
+  box-shadow: rgba(12, 205, 88, 0.4) 0 0 0 5px, rgba(12, 205, 88, 0.3) -5px 5px 0 5px, rgba(12, 205, 88, 0.2) -10px 10px 0 5px, rgba(12, 205, 88, 0.1) -15px 15px 0 5px;
+}
+#alert-box {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 30px;
+}
+#alert-text {
+  padding: 10px;
+  color: var(--secondary);
+  font-weight: bold;
+  font-size: x-large;
+}
+
+footer {
+  /* margin-top: 200px; */
+  background-color: var(--primary);
+  color: #0CCD58;
 }
