--- a/team/musab/musab1.css
+++ b/team/musab/musab1.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family: Gotham Rounded, sans-serif;
+    /* font-family: Gotham Rounded, sans-serif; */
     font-weight: normal;
 }
 
