--- a/team/musab/musab.css
+++ b/team/musab/musab.css
@@ -33,7 +33,8 @@ header {
 
 main {
   margin: auto;
-  background-image: url(/team/musab/img/42669630_custom-2048x934.jpg);
+  /* background-image: url(/team/musab/img/42669630_custom-2048x934.jpg); */
+  background-image: url(./img/42669630_custom-2048x934.jpg);
   height: 900px;
   width: 1800px;
   position: relative;
